# cairn

./: .gitignore  CAIRN_SPEC.md  README.md  ROADMAP.md  hatch_build.py  pyproject.toml
.claude/: audit.md
.github/workflows/: ci.yml
cairn/: __init__.py  __main__.py  cli.py  config.py
cairn/integrations/: huggingface.py
cairn/sdk/: buffer.py  discovery.py  local.py  plugins.py  reader.py  run.py  transport.py  wal.py  wrappers.py
cairn/sdk/capture/: env.py  git.py  source.py  stdout.py  system.py
cairn/sdk/handlers/: __init__.py  artifact.py  audio.py  figure.py  histogram.py  image.py  plugin.py  registry.py  scalar.py  tensor.py  text.py  video.py
cairn/server/: advertise.py  app.py  artifact_registry_ops.py  downsample.py  ingest_ops.py  wal_ingest.py
cairn/server/routes/: _common.py  artifact_registry.py  artifacts.py  compare.py  comparisons.py  health.py  import_export.py  ingest.py  logs.py  plugin_webrtc.py  plugin_ws.py  projects.py  runs.py  sequences.py  source.py
cairn/server/storage/: blobs.py  datadir.py  db.py  migrations.py
cairn/ui/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
cairn/ui/src/: App.tsx  index.css  main.tsx
examples/: artifact_registry.py  dask_sweep.py  demo_plugins.py  demo_plugins_v2.py  demo_training.py  fabric_remote.py  kubernetes_jobs.py  multi_process.py  multi_thread.py  multiprocessing_pool.py  ray_tune.py  stress_1k.py  submitit_sweep.py  test_wal.py
examples/plugins/: confusion_matrix.py  heatmap.js  heatmap_cls.py  histogram.py  histogram_cls.py  server_3d_cls.py  server_heatmap_cls.py  surface3d.py  surface3d_cls.py  surface3d_mpl.py  test_interactive.js  webgl_demo_cls.py  window_blender_cls.py  window_glxgears_cls.py  window_xeyes_cls.py
tests/: conftest.py
tests/integration/: test_api_compare.py  test_api_concurrency.py  test_api_downsample.py  test_api_health.py  test_api_lifecycle.py  test_api_logs.py  test_api_range.py  test_api_source.py  test_run_e2e.py  test_run_local.py  test_run_perf.py  test_run_resume.py  test_run_while_ui.py
tests/unit/: test_blobs.py  test_buffer.py  test_capture_env.py  test_capture_git.py  test_capture_source.py  test_capture_stdout.py  test_capture_system.py  test_cli.py  test_cli_init.py  test_cli_ui.py  test_config.py  test_config_target.py  test_datadir.py  test_db.py  test_discovery.py  test_downsample.py  test_handler_audio.py  test_handler_figure.py  test_handler_histogram.py  test_handler_image.py  test_handler_scalar.py  test_handler_tensor.py  test_handler_text.py  test_handler_video.py  test_hf_callback.py  test_local_transport.py  test_migrations.py  test_registry.py  test_transport.py  test_wal.py  test_wal_transport.py  test_wrappers.py
ui-src/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
ui-src/src/: App.tsx  index.css  main.tsx
ui-src/src/api/: client.ts  hooks.ts  types.ts
ui-src/src/components/: AudioPlayerCard.tsx  CardGrid.tsx  CardHeader.tsx  CardRenderer.tsx  CardResizeHandle.tsx  DraggableCard.tsx  FigureInteractiveCard.tsx  HistogramCard.tsx  ImageGalleryCard.tsx  RunStatusBadge.tsx  SeriesChip.tsx  (+4 more)
(+97 files in other folders)
