[project]
name = "cairn-track"
version = "0.1.1"
description = "An open-source ML experiment tracker with a client/server architecture for easy cross-device use on a local network."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Cairn contributors" }]
keywords = ["machine-learning", "experiment-tracking", "mlops", "sqlite"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0",
    "httpx>=0.27.0",
    "zstandard>=0.22.0",
    "pillow>=10.0.0",
    "numpy>=1.24",
    "click>=8.1.0",
    "platformdirs>=4.0",
    "psutil>=5.9",
    "pynvml>=11.5.0",
    "python-multipart>=0.0.9",
    "tomli-w>=1.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
media = [
    "matplotlib>=3.7",
    "plotly>=5.18",
    "imageio>=2.34",
    "imageio-ffmpeg>=0.4.9",
    "soundfile>=0.12",
]
plugins = [
    "mss>=9.0",
    "aiortc>=1.9",
    "python-xlib>=0.33",
]
hf = [
    "transformers>=4.40",
    "datasets>=2.18",
]
discovery = [
    "zeroconf>=0.132",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "pytest-timeout>=2.3",
    "respx>=0.21",
    "freezegun>=1.4",
    "matplotlib>=3.7",
    "plotly>=5.18",
    "imageio>=2.34",
    "imageio-ffmpeg>=0.4.9",
    "soundfile>=0.12",
    "zeroconf>=0.132",
    "transformers>=4.40",
]

[project.scripts]
cairn = "cairn.cli:main"

[project.urls]
Repository = "https://github.com/anthropics/cairn"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cairn"]
artifacts = ["cairn/ui/dist/**/*"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.sdist]
include = [
    "cairn/",
    "ui-src/",
    "tests/",
    "examples/",
    "README.md",
    "LICENSE",
    "pyproject.toml",
    "CAIRN_SPEC.md",
    "hatch_build.py",
]
exclude = [
    "ui-src/node_modules",
    "ui-src/dist",
    "cairn/ui/dist",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "torch: tests that require torch",
    "media: tests that require media extras (matplotlib/plotly/imageio/soundfile)",
    "network: tests that use real network sockets",
    "slow: slow tests (perf benchmarks)",
]
filterwarnings = [
    "ignore::DeprecationWarning:pynvml",
]

[tool.coverage.run]
source = ["cairn"]
omit = [
    "cairn/ui/*",
    "*/tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
